# sparv-wsd-rs

./: .bumpversion.toml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
assets/metadata/: .gitignore  config.yaml
assets/small/: bet-2018-2021-1-short_export.gold.xml
examples/: .gitignore  config.yaml
examples/small/: config.yaml
examples/small/source/: bet-2018-2021-1-short.xml
scripts/: compare-annotations.py  transform_readme.py
src/sbx_wsd_rs/: metadata.yaml  wsd.py
src/sparv_wsd_rs/: __init__.py  wsd.py
tests/: test_wsd.py
