[project]
name = "sparv-wsd-rs"
version = "0.1.0"
description = "Sparv plugin for using wsd-rs with Sparv."
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
requires-python = ">=3.11"
dependencies = ["sparv>=5.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."sparv.plugin"]
sparv_wsd_rs = "sparv_wsd_rs"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/sparv_wsd_rs"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
