[project]
name = "sparv-sbx-wsd-rs"
version = "0.1.0"
description = "Sparv plugin for using wsd-rs with Sparv."
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
requires-python = ">=3.11"
dependencies = [
    "saldowsd>=0.2.3",
    "setuptools>=75.6.0",
    "sparv>=5.3.1",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.entry-points."sparv.plugin"]
sbx_wsd_rs = "sbx_wsd_rs"

[tool.uv.build-backend]
module-name = "sbx_wsd_rs"
source-exclude = ["/.github", "/docs"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
