[project]
name = "sparv-sbx-wsd-rs"
version = "0.1.1"
description = "Sparv plugin for using wsd-rs with Sparv."
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
requires-python = ">=3.11"
dependencies = [
    "saldowsd>=0.2.3",
    "setuptools>=75.6.0",
    "sparv>=5.3.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",  # See here: https://github.com/spraakbanken/sparv-sbx-wsd-rs/issues/25
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/sparv-sbx-wsd-rs"
Issues = "https://github.com/spraakbanken/sparv-sbx-wsd-rs/issues"
Changelog = "https://github.com/spraakbanken/sparv-sbx-wsd-rs/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.entry-points."sparv.plugin"]
sbx_wsd_rs = "sbx_wsd_rs"

[tool.uv.build-backend]
module-name = "sbx_wsd_rs"
source-exclude = ["/.github", "/docs"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
metadata = [
    "sparv-sbx-metadata",
]

[tool.uv.sources]
sparv-sbx-metadata = { git = "https://github.com/spraakbanken/sparv-sbx-metadata", tag = "v2.3.1" }
